# segment-processor

./: README.md  pyproject.toml
input/: Ward_to_Local_Authority_District_(May_2025)_Lookup_in_the_UK_v2.geojson
segment_processor/: main.py
